refactor Add open setting.